[package]
name = "wolfe-desktop"
version = "0.1.0"
description = "A Tauri desktop client for Wolfe semantic file search"
authors = ["Wolfe contributors"]
edition = "2021"

[lib]
name = "wolfe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
arrow-array = "57.3"
base64 = "0.22"
directories = "5.0"
lance = "4.0"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
uuid = { version = "1.10", features = ["v4"] }
